--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "marcoazn89/http-wrapper": "dev-dev"
+        "marcoazn89/http-wrapper": "dev-dev",
+        "monolog/monolog": "^1.14"
     },
     "autoload": {
         "psr-4": {
-            "BooBoo\\": "src/"
+            "Exception\\": "src/",
+            "MyBooBoos\\": "src/MyBooBoos"
         }
     }
 }
